@@ -1,3 +1,8 @@
+2005-09-11 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* scripts/libprometheus.bash.in: Changed source_profile and its callees
+	  to work with the new reroot setup.
+
 2005-09-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* scripts/libprometheus.bash.in: Made the sync_system a little bit more
